--- a/TestDemoPark/Base.lproj/Main.storyboard
+++ b/TestDemoPark/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s58-2L-54i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="174" y="724"/>
+            <point key="canvasLocation" x="518" y="631"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aFR-gh-obs">
@@ -457,7 +457,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gFp-XY-lPd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="869" y="724"/>
+            <point key="canvasLocation" x="1182" y="631"/>
         </scene>
         <!--RSA加密解密-->
         <scene sceneID="uem-B3-Ejk">
@@ -501,6 +501,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eNe-a9-aus" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1914" y="-80"/>
+        </scene>
+        <!--Layer Ani View Controller-->
+        <scene sceneID="jRt-Ea-gjG">
+            <objects>
+                <viewController storyboardIdentifier="CALayerAniViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kul-Ph-6GA" customClass="CALayerAniViewController" customModule="TestDemoPark" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UaU-P0-bdz"/>
+                        <viewControllerLayoutGuide type="bottom" id="02D-2Z-gcQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AeH-ti-eca">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JsS-XM-B7R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="518" y="1363"/>
         </scene>
         <!--Network Load Test View Controller-->
         <scene sceneID="e5Z-s7-Ky3">
